Guava Immutables #521
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/521